--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: fisica
 description: Two-dimensional physics simulation for Flutter.
-version: 0.1.0+1
-publish_to: none
+version: 0.0.1+1
+repository: https://github.com/alestiago/fisica
+issue_tracker: https://github.com/alestiago/fisica/issues
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
-  flutter: 3.10.0
 
 dependencies:
   flutter:
